# RustGameEngine

./: .gitignore  Cargo.toml  Makefile  build.rs
src/: enums.rs  event.rs  globals.rs  main.rs  message.rs  pointers.rs  rect.rs  sdl.rs  sdl2_bindings.rs  sdl2_image_bindings.rs  test.rs
