[package]
name = "RustGameEngine"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.15"

[build-dependencies]
bindgen = "0.64.0"

[package.metadata.bindings.sdl2_image]
path = "src/sdl2_image_bindings.rs"
links = ["SDL2_image"]

[package.metadata.bindings.sdl2]
path = "src/sdl2_bindings.rs"
links = ["SDL2"]
